--- a/STARK/packages.config
+++ b/STARK/packages.config
@@ -6,6 +6,7 @@
   <package id="Fody" version="6.0.5" targetFramework="net452" developmentDependency="true" />
   <package id="FParsec" version="1.0.3" targetFramework="net452" />
   <package id="FSharp.Core" version="4.3.4" targetFramework="net452" />
+  <package id="ILMerge" version="3.0.29" targetFramework="net452" />
   <package id="LtGt" version="2.0.1" targetFramework="net452" />
   <package id="MahApps.Metro" version="1.6.5" targetFramework="net452" />
   <package id="MahApps.Metro.Resources" version="0.6.1.0" targetFramework="net452" />
